k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-tester
  labels:
    app.kubernetes.io/name: nodejs-tester
